--- a/UIMockups/test1.html
+++ b/UIMockups/test1.html
@@ -17,7 +17,12 @@
 		<div class="sandbox">
 			<div class="leftPane col-md-2 overlayingRight">
 				<div id="nodeList" class="nodeList">
-					<div ng-draggable class="node">Node1</div>
+					<ng-node>Node1</ng-node>
+					<ng-node>Node2</ng-node>
+					<ng-node>Node3</ng-node>
+					<ng-node>Node4</ng-node>
+					<ng-node>Node5</ng-node>
+					<ng-node>Node6</ng-node>
 				</div>
 			</div>
 			<div class="rightCanvas col-md-10"></div>
