Dragging and Figuring out the node going outside the leftPane bounds.

--- a/UIMockups/index.html
+++ b/UIMockups/index.html
@@ -15,14 +15,14 @@
 	<div ng-controller="myController">
 		<h2>Draging Directive Testing</h2>
 		<div class="sandbox">
-			<div class="leftPane col-md-2 overlayingRight">
+			<div id="leftPane" class="leftPane col-md-2 overlayingRight">
 				<div id="nodeList" class="nodeList">
-					<ng-node>Node1</ng-node>
-					<ng-node>Node2</ng-node>
-					<ng-node>Node3</ng-node>
-					<ng-node>Node4</ng-node>
-					<ng-node>Node5</ng-node>
-					<ng-node>Node6</ng-node>
+					<ng-node nid="1">Node1</ng-node>
+					<ng-node nid="2">Node2</ng-node>
+					<ng-node nid="3">Node3</ng-node>
+					<ng-node nid="4">Node4</ng-node>
+					<ng-node nid="5">Node5</ng-node>
+					<ng-node nid="6">Node6</ng-node>
 				</div>
 			</div>
 			<div class="rightCanvas col-md-10"></div>
