--- a/UIMockups/index.html
+++ b/UIMockups/index.html
@@ -8,6 +8,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="core.css">
 </head>
 
@@ -17,7 +18,7 @@
 		<div class="sandbox">
 			<div id="leftPane" class="leftPane col-md-2 overlayingRight">
 				<div id="nodeList" class="nodeList">
-					<ng-node nid="1">Node1</ng-node>
+					<ng-node nid="1" icon="fa-arrows">Node1</ng-node>
 					<ng-node nid="2">Node2</ng-node>
 					<ng-node nid="3">Node3</ng-node>
 					<ng-node nid="4">Node4</ng-node>
