--- a/UIMockups/node.html
+++ b/UIMockups/node.html
@@ -1,1 +1,1 @@
-<div class="node padIt"><i ng-class="{false:'fa '+icon, true:'fa fa-dot-circle-o'}[icon===undefined]" aria-hidden="true"></i><div ng-transclude></div></div>
+<div class="node padIt" nid={{nid}}><i ng-class="{false:'fa '+icon, true:'fa fa-dot-circle-o'}[icon===undefined]" aria-hidden="true"></i><div ng-transclude></div></div>
