--- a/UIMockups/index.html
+++ b/UIMockups/index.html
@@ -42,7 +42,9 @@
 					<ng-node nid="20">Node20</ng-node>
 				</div>
 			</div>
-			<div class="rightCanvas col-md-10"></div>
+			<div class="rightCanvas col-md-10">
+				<!--TODO: Define the autoupdating canvas-->
+			</div>
 				<div class="playground"></div>
 				<div class="sample"></div>
 		</div>
