--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -24,8 +24,10 @@
         #initial-loader{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;width:100%;background:#212121;position:fixed;z-index:10000;top:0;left:0;bottom:0;right:0;transition:opacity .2s ease-out}#initial-loader .initial-loader-top{display:flex;align-items:center;justify-content:space-between;width:200px;border-bottom:1px solid #2d2d2d;padding-bottom:5px}#initial-loader .initial-loader-top > *{display:block;flex-shrink:0;flex-grow:0}#initial-loader .initial-loader-bottom{padding-top:10px;color:#5C5C5C;font-family:-apple-system,"Helvetica Neue",Helvetica,"Segoe UI",Arial,sans-serif;font-size:12px}@keyframes spin{100%{transform:rotate(360deg)}}#initial-loader .loader g{transform-origin:50% 50%;animation:spin .5s linear infinite}body.loading {overflow: hidden !important} body.loaded #initial-loader{opacity:0}
     </style>
     <!--END Loader-->
+
+    <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
   </head>
-  <body ng-controller="AppCtrl" class="sidebar-light-info ">
+  <body ng-controller="AppCtrl" class="sidebar-light-primary ">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -67,5 +69,10 @@
 
         <script src="assets/javascript/plugins-init.js"></script>
     <script src="assets/javascript/switchery-settings.js"></script>
+    <script src="assets/javascript/app/helpers.js"></script>
+    <script src="assets/javascript/app/layoutControl.js"></script>
+    <script src="assets/javascript/app/rightSidebar.js"></script>
+    <script src="assets/javascript/app/sidebar.js"></script>
+    <script src="assets/javascript/app/main.js"></script>
 </body>
 </html>
