Done w/ drag and drop & default UI & click event

--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/stylesheets/plugins.css">
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 
     <!--START Loader -->
     <style>
@@ -57,12 +59,17 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ngDraggable/ngDraggable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
+    <script
+      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+      integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+      crossorigin="anonymous"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <!-- endbuild -->
