--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -27,9 +27,29 @@
     </style>
     <!--END Loader-->
 
+
     <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
   </head>
   <body ng-controller="AppCtrl" class="sidebar-light-primary ">
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '179816492585915',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v2.10'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
