--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -80,6 +80,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ngDraggable/ngDraggable.js"></script>
+    <script src="bower_components/angularjs-social-login/angularjs-social-login.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script
