--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <title>Visual Analytics as a Service</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/dropzone/dist/min/dropzone.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -25,11 +23,6 @@
 
 
 
-    <!--START Loader -->
-    <style>
-        #initial-loader{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;width:100%;background:#212121;position:fixed;z-index:10000;top:0;left:0;bottom:0;right:0;transition:opacity .2s ease-out}#initial-loader .initial-loader-top{display:flex;align-items:center;justify-content:space-between;width:200px;border-bottom:1px solid #2d2d2d;padding-bottom:5px}#initial-loader .initial-loader-top > *{display:block;flex-shrink:0;flex-grow:0}#initial-loader .initial-loader-bottom{padding-top:10px;color:#5C5C5C;font-family:-apple-system,"Helvetica Neue",Helvetica,"Segoe UI",Arial,sans-serif;font-size:12px}@keyframes spin{100%{transform:rotate(360deg)}}#initial-loader .loader g{transform-origin:50% 50%;animation:spin .5s linear infinite}body.loading {overflow: hidden !important} body.loaded #initial-loader{opacity:0}
-    </style>
-    <!--END Loader-->
 
 
     <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
@@ -59,17 +52,12 @@
     <![endif]-->
 
     <!-- Bower Libraries Scripts -->
-    <script src="assets/vendor/js/lib.min.js"></script>
-
-    <div class="uiview" ui-view  autoscroll="true"></div>
+    <div ui-view  ></div>
 
 
 
 
     <!-- Bower Libraries Styles -->
-    <link rel="stylesheet" href="assets/vendor/css/lib.min.css">
-
-
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -92,6 +80,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
     <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
+    <script src="node_modules/jquery-csv/src/jquery.csv.js"></script>
+
+
     <script
       src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
       integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
@@ -104,14 +95,9 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/upload.js"></script>
+        <script src="scripts/controllers/upload_preview.js"></script>
         <!-- endbuild -->
 
-        <script src="assets/javascript/plugins-init.js"></script>
-    <script src="assets/javascript/switchery-settings.js"></script>
-    <script src="assets/javascript/app/helpers.js"></script>
-    <script src="assets/javascript/app/layoutControl.js"></script>
-    <script src="assets/javascript/app/rightSidebar.js"></script>
-    <script src="assets/javascript/app/sidebar.js"></script>
-    <script src="assets/javascript/app/main.js"></script>
+    <script src="assets/javascript/bootstable.min.js"></script>
 </body>
 </html>
