change main ui module

--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -14,15 +14,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="assets/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="assets/stylesheets/app.css">
+    <link rel="stylesheet" href="assets/stylesheets/custom.css">
     <link rel="stylesheet" href="assets/stylesheets/plugins.css">
+    <link rel="stylesheet" href="assets/stylesheets/jquery.flowchart.min.css">
     <!-- endbuild -->
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
-
-
-
-
 
 
     <script src="https://cdn.rawgit.com/konvajs/konva/1.6.5/konva.min.js"></script>
@@ -81,6 +79,7 @@
     <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
     <script src="node_modules/jquery-csv/src/jquery.csv.js"></script>
+    <script src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
 
 
     <script
@@ -99,5 +98,6 @@
         <!-- endbuild -->
 
     <script src="assets/javascript/bootstable.min.js"></script>
+    <script src="assets/javascript/jquery.flowchart.js"></script>
 </body>
 </html>
