--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -73,6 +73,7 @@
     <script src="bower_components/angularjs-social-login/angularjs-social-login.js"></script>
     <script src="bower_components/dropzone/dist/min/dropzone.min.js"></script>
     <script src="bower_components/ng-dropzone/dist/ng-dropzone.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
