Modify the output formats

--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/upload.js"></script>
+        <script src="scripts/controllers/result.js"></script>
         <script src="scripts/controllers/upload_preview.js"></script>
         <!-- endbuild -->
 
