--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -101,5 +101,6 @@
 
     <script src="assets/javascript/bootstable.min.js"></script>
     <script src="assets/javascript/jquery.flowchart.js"></script>
+    <script src="paging.js"></script>
 </body>
 </html>
