--- a/Developments/GUI/app/index.html
+++ b/Developments/GUI/app/index.html
@@ -102,5 +102,6 @@
     <script src="assets/javascript/bootstable.min.js"></script>
     <script src="assets/javascript/jquery.flowchart.js"></script>
     <script src="paging.js"></script>
+    <link rel="stylesheet" href="paginate.css">
 </body>
 </html>
